feat: add unit test , wsd , and erd
