# docs/swagger.json
@@ -210,6 +210,13 @@
                 "summary": "Purchase a premium package",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "bearer token",
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "User purchase request",
                         "name": "userPurchase",
                         "in": "body",
